--- a/pinyougou-shop-web/src/main/webapp/admin/goods_edit.html
+++ b/pinyougou-shop-web/src/main/webapp/admin/goods_edit.html
@@ -81,7 +81,7 @@
                       <select class="form-control select-sm" ng-model="entity.goods.category3Id" ng-options="item.id as item.name for item in itemCat3List"></select>
                     </td>
                     <td>
-                      模板ID:19
+                      模板ID:{{ entity.goods.typeTemplateId }}
                     </td>
                   </tr>
                 </table>
