--- a/pinyougou-shop-web/src/main/webapp/admin/goods_edit.html
+++ b/pinyougou-shop-web/src/main/webapp/admin/goods_edit.html
@@ -193,149 +193,143 @@
 
                 <div class="row data-type">
 
-                  <div>
-                    <div class="col-md-2 title">屏幕尺寸</div>
+                  <div ng-repeat="pojo in findSpecList">
+                    <div class="col-md-2 title">{{ pojo.text }}</div>
                     <div class="col-md-10 data">
 
-                      <span>
-                        <input type="checkbox">4.0
-                      </span>
-                      <span>
-                        <input type="checkbox">4.5
-                      </span>
-                      <span>
-                        <input type="checkbox">5.0
+                      <span ng-repeat="option in pojo.options">
+                        <input type="checkbox">{{ option.optionName }}
                       </span>
 
                     </div>
                   </div>
-                  <div>
-                    <div class="col-md-2 title">网络制式</div>
-                    <div class="col-md-10 data">
+                  <!--                  <div>-->
+                  <!--                    <div class="col-md-2 title">网络制式</div>-->
+                  <!--                    <div class="col-md-10 data">-->
 
-                      <span>
-                        <input type="checkbox">2G
-                      </span>
-                      <span>
-                        <input type="checkbox">3G
-                      </span>
-                      <span>
-                        <input type="checkbox">4G
-                      </span>
+                  <!--                      <span>-->
+                  <!--                        <input type="checkbox">2G-->
+                  <!--                      </span>-->
+                  <!--                      <span>-->
+                  <!--                        <input type="checkbox">3G-->
+                  <!--                      </span>-->
+                  <!--                      <span>-->
+                  <!--                        <input type="checkbox">4G-->
+                  <!--                      </span>-->
 
-                    </div>
-                  </div>
-
-                </div>
-
-
-                <div class="row data-type">
-                  <table class="table table-bordered table-striped table-hover dataTable">
-                    <thead>
-                      <tr>
-                        <th class="sorting">屏幕尺寸</th>
-                        <th class="sorting">网络制式</th>
-                        <th class="sorting">价格</th>
-                        <th class="sorting">库存</th>
-                        <th class="sorting">是否启用</th>
-                        <th class="sorting">是否默认</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td>
-                          4.0
-                        </td>
-                        <td>
-                          3G
-                        </td>
-                        <td>
-                          <input class="form-control" placeholder="价格">
-                        </td>
-                        <td>
-                          <input class="form-control" placeholder="库存数量">
-                        </td>
-                        <td>
-                          <input type="checkbox">
-                        </td>
-                        <td>
-                          <input type="checkbox">
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>
-                          4.0
-                        </td>
-                        <td>
-                          4G
-                        </td>
-                        <td>
-                          <input class="form-control" placeholder="价格">
-                        </td>
-                        <td>
-                          <input class="form-control" placeholder="库存数量">
-                        </td>
-                        <td>
-                          <input type="checkbox">
-                        </td>
-                        <td>
-                          <input type="checkbox">
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>
-                          5.0
-                        </td>
-                        <td>
-                          3G
-                        </td>
-                        <td>
-                          <input class="form-control" placeholder="价格">
-                        </td>
-                        <td>
-                          <input class="form-control" placeholder="库存数量">
-                        </td>
-                        <td>
-                          <input type="checkbox">
-                        </td>
-                        <td>
-                          <input type="checkbox">
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>
-                          5.0
-                        </td>
-                        <td>
-                          4G
-                        </td>
-                        <td>
-                          <input class="form-control" placeholder="价格">
-                        </td>
-                        <td>
-                          <input class="form-control" placeholder="库存数量">
-                        </td>
-                        <td>
-                          <input type="checkbox">
-                        </td>
-                        <td>
-                          <input type="checkbox">
-                        </td>
-                      </tr>
-
-                    </tbody>
-                  </table>
-
+                  <!--                    </div>-->
                 </div>
 
               </div>
-          </div>
 
+
+              <div class="row data-type">
+                <table class="table table-bordered table-striped table-hover dataTable">
+                  <thead>
+                    <tr>
+                      <th class="sorting">屏幕尺寸</th>
+                      <th class="sorting">网络制式</th>
+                      <th class="sorting">价格</th>
+                      <th class="sorting">库存</th>
+                      <th class="sorting">是否启用</th>
+                      <th class="sorting">是否默认</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>
+                        4.0
+                      </td>
+                      <td>
+                        3G
+                      </td>
+                      <td>
+                        <input class="form-control" placeholder="价格">
+                      </td>
+                      <td>
+                        <input class="form-control" placeholder="库存数量">
+                      </td>
+                      <td>
+                        <input type="checkbox">
+                      </td>
+                      <td>
+                        <input type="checkbox">
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        4.0
+                      </td>
+                      <td>
+                        4G
+                      </td>
+                      <td>
+                        <input class="form-control" placeholder="价格">
+                      </td>
+                      <td>
+                        <input class="form-control" placeholder="库存数量">
+                      </td>
+                      <td>
+                        <input type="checkbox">
+                      </td>
+                      <td>
+                        <input type="checkbox">
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        5.0
+                      </td>
+                      <td>
+                        3G
+                      </td>
+                      <td>
+                        <input class="form-control" placeholder="价格">
+                      </td>
+                      <td>
+                        <input class="form-control" placeholder="库存数量">
+                      </td>
+                      <td>
+                        <input type="checkbox">
+                      </td>
+                      <td>
+                        <input type="checkbox">
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        5.0
+                      </td>
+                      <td>
+                        4G
+                      </td>
+                      <td>
+                        <input class="form-control" placeholder="价格">
+                      </td>
+                      <td>
+                        <input class="form-control" placeholder="库存数量">
+                      </td>
+                      <td>
+                        <input type="checkbox">
+                      </td>
+                      <td>
+                        <input type="checkbox">
+                      </td>
+                    </tr>
+
+                  </tbody>
+                </table>
+
+              </div>
+
+          </div>
         </div>
-        <!--tab内容/-->
-        <!--表单内容/-->
 
       </div>
+      <!--tab内容/-->
+      <!--表单内容/-->
+
+    </div>
 
 
 
