--- a/pinyougou-shop-web/src/main/webapp/admin/goods_edit.html
+++ b/pinyougou-shop-web/src/main/webapp/admin/goods_edit.html
@@ -199,13 +199,13 @@
                     <div class="col-md-10 data">
 
                       <span ng-repeat="option in pojo.options">
-                        <input type="checkbox" ng-click="updateSpecAttribute(pojo.text, option.optionName)">{{ option.optionName }}
+                        <input type="checkbox" ng-click="updateSpecAttribute($event, pojo.text, option.optionName)">{{ option.optionName }}
                       </span>
 
                     </div>
                   </div>
                 </div>
-            {{entity.goodsDesc.specificationItems}}
+            
               </div>
 
 
